<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.4</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.warepulse</groupId>
	<artifactId>ware-pulse</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Ware-Pulse</name>
	<description>project for Spring Boot</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>21</java.version>
	</properties>
	<dependencies>

		<dependency>
  			<groupId>com.h2database</groupId>
  			<artifactId>h2</artifactId>
  			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
	
	
		<dependency>
    		<groupId>mysql</groupId>
    		<artifactId>mysql-connector-java</artifactId>
			<version>8.0.30</version>
    		<scope>runtime</scope>
  		</dependency>

		<dependency>
    		<groupId>org.junit.jupiter</groupId>
   		 	<artifactId>junit-jupiter</artifactId>
    		<version>5.9.1</version>
    		<scope>test</scope>
		</dependency>

		<dependency>
    		<groupId>org.mockito</groupId>
    		<artifactId>mockito-core</artifactId>
    		<version>5.3.1</version>
    		<scope>test</scope>
		</dependency>

		<dependency>
    		<groupId>org.mockito</groupId>
    		<artifactId>mockito-junit-jupiter</artifactId>
    		<version>5.3.1</version>
    		<scope>test</scope>
		</dependency>

		<dependency>
  			<groupId>org.springframework.boot</groupId>
  			<artifactId>spring-boot-starter-websocket</artifactId>
		</dependency>

		<dependency>
    		<groupId>org.springframework.boot</groupId>
    		<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>

		<dependency>
  			<groupId>io.jsonwebtoken</groupId>
  			<artifactId>jjwt-api</artifactId>
  			<version>0.11.5</version>
		</dependency>

		<dependency>
  			<groupId>io.jsonwebtoken</groupId>
  			<artifactId>jjwt-impl</artifactId>
  			<version>0.11.5</version>
  			<scope>runtime</scope>
		</dependency>

		<dependency>
  			<groupId>io.jsonwebtoken</groupId>
  			<artifactId>jjwt-jackson</artifactId>
  			<version>0.11.5</version>
  			<scope>runtime</scope>
		</dependency>

		<dependency>
  			<groupId>org.projectlombok</groupId>
  			<artifactId>lombok</artifactId>
  			<version>1.18.28</version>
  			<scope>provided</scope>
		</dependency>

</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

</project>
